# ai-complexity-analyzer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  format.yml
complexity_analyzer/: __init__.py  analyzer.py  cli.py  github_client.py  models.py  token_manager.py
tests/: __init__.py  test_analyzer.py  test_github_client.py
